# workbook-compiler

./: .gitignore  README.md  generation_helpers.py  mkdocs.yml  pyproject.toml  requirements.txt
design/: brainstorming.md
docs/: workbook_compiler-reference.md
src/workbook_compiler/: __init__.py
src/workbook_compiler/base/: exceptions.py
src/workbook_compiler/design/: brainstorming.md
src/workbook_compiler/fixtures/: filled.jsonnet
src/workbook_compiler/parser/: cell.py  parser.py  range.py  reader.py  test_range.py
src/workbook_compiler/parser_types/: cell.py  range.py
src/workbook_compiler/renderer/: render.py  test_renderer.py
tests/: test_parser.py
wbc/: mkdocs.yml  pyproject.toml
wbc-cli/: README.md
wbc-cli-hatch/: README.md  UNLICENSE.md  pyproject.toml
wbc-cli-hatch/src/wbc/: __main__.py
wbc-cli-hatch/src/wbc/cli/: __init__.py
wbc-cli-hatch/tests/: test_parser.py
wbc-cli-hatch/tests/fixtures/: simple.jsonnet
wbc-cli/src/wbc/cli/: __init__.py
wbc-cli/src/wbc/fixtures/: filled.jsonnet
wbc-cli/src/wbc/parser/: cell.py  parser.py  sheet.py  workbook.py
wbc-cli/src/wbc/renderer/: render.py
wbc-cli/tests/: test_range.py  test_renderer.py
wbc-orig/: __init__.py
wbc/docs/: compiler.md  development.md  guide.md  index.md
wbc/docs/language/: reference.md
wbc/examples/: 01-empty.jsonnet  01-empty.py  02-sheet.jsonnet  02-sheet.py  03-ranges.py  03a-ranges.jsonnet  03b-ranges.jsonnet
wbc/fixtures/: addl_ueis.jsonnet  horizontal.jsonnet
wbc/fixtures/lib/: color.libsonnet  constants.libsonnet  constructors.libsonnet  styles.libsonnet  types.libsonnet
wbc/fixtures/should_pass/: empty_workbook.jsonnet
wbc/fixtures/workbooks/: additional_ueis.jsonnet  au.json  coversheet.libsonnet
wbc/parser/: parser.py  range.py  sheet.py  test_cell.py  workbook.py
wbc/renderer/: render.py  test_renderer.py
wbc/tests/: test_cell.py  test_parser.py  test_range.py  test_renderer.py
wbc/tests/fixtures/: addl_ueis.jsonnet  simple_functions.jsonnet  workbook_base.libsonnet  workbook_functions.libsonnet
wbc/tests/fixtures/should_pass/: empty_sheets.jsonnet
wbc/tests/fixtures/sonnet/: constructors.libsonnet  types.libsonnet
wbc/wbc/: __init__.py  cli.py  constants.py
wbc/wbc/parser/: cell.py  contents.py  exceptions.py  formula.py  objects.py  parse.py  parser.py  range.py  reader.py  sheet.py  style.py  test_cell.py  test_formula.py  test_objects.py  test_range.py  test_util.py  util.py  workbook.py
wbc/wbc/renderer/: render.py
