[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "com_jadud_workbook_compiler"
version = "0.0.1"
authors = [
  { name="Matt Jadud", email="matt@jadud.com" },
]
description = "A workbook compiler"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jadudm/workbook-compiler"
"Bug Tracker" = "https://github.com/jadudm/workbook-compiler/issues"