[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wbc"
version = "0.0.1"
authors = [
  { name="Matt Jadud", email="matt@jadud.com" },
]
description = "A workbook compiler (wbc)"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Operating System :: OS Independent",
]

[tool.hatch.version]
path = "wbc/__about__.py"

[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=wbc --cov=tests"
no-cov = "cov --no-cov"

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "wbc/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[project.urls]
"Homepage" = "https://github.com/jadudm/workbook-compiler"
"Bug Tracker" = "https://github.com/jadudm/workbook-compiler/issues"