[tool.poetry]
name = "wbc"
version = "0.1.0"
description = ""
authors = ["Matt Jadud <matt@jadud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openpyxl = "^3.1.2"
mypy = "^1.6.1"
jsonnet = "^0.20.0"
click = "^8.1.7"
xlcalculator = "^0.5.0"
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.8"
mkdocstrings = "^0.23.0"
mkdocstrings-python = "^1.7.3"
dotmap = "^1.3.30"
coverage = "^7.3.2"
colour = "^0.1.5"


[tool.poetry.scripts]
wbc = "wbc.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
